feat: add fix for rotterdam data issue and first round of score

--- a/upload_to_neo4j.ipynb
+++ b/upload_to_neo4j.ipynb
@@ -16,15 +16,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "a73452fd",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/zk/99phrd0d2fs5xjbc622wn4_h0000gn/T/ipykernel_18482/980874636.py:34: DeprecationWarning: The 'unary_union' attribute is deprecated, use the 'union_all()' method instead.\n",
+      "  nearest_geom = nearest_points(point, gdf_target.unary_union)[1]\n"
+     ]
+    }
+   ],
    "source": [
     "#bad practice will fix later\n",
+    "import dask_geopandas as dgpd\n",
     "from neo4j import GraphDatabase\n",
     "import geopandas as gpd\n",
     "import pandas as pd\n",
+    "from shapely.geometry import Point\n",
+    "from shapely.ops import nearest_points\n",
+    "from pyproj import Transformer, CRS\n",
     "\n",
     "URI = \"bolt://localhost:7687\"\n",
     "AUTH = (\"neo4j\", \"12345678\")\n",
@@ -37,12 +50,35 @@
     "\n",
     "    # read geojson in gpd\n",
     "    pc4_muni_density = gpd.read_file(\"data/zh_pc4_gdf_with_municipality_and_ev_charger_density.geojson\")\n",
+    "    # rename Government of Rotterdam to Rotterdam\n",
+    "    pc4_muni_density['municipality'] = pc4_muni_density['municipality'].replace(\n",
+    "        {\"Government of Rotterdam\": \"Rotterdam\"}\n",
+    "    )\n",
     "    # display(pc4_muni_density)\n",
     "    combined_charging_points = gpd.read_file(\"data/combined-charging-points-zuid-holland.geojson\")\n",
     "    # display(combined_charging_points)\n",
     "    muni_translated = pd.read_json(\"data/municipalities_data_translated.json\")\n",
     "    # display(muni_translated)\n",
     "    parking_candidates = gpd.read_file(\"data/candidates.gpkg\")\n",
+    "\n",
+    "    # get closest ev charger to each parking candidate\n",
+    "    def generate_closest_points(gdf_source, gdf_target):\n",
+    "        # Convert the GeoDataFrames to EPSG:3857 for accurate distance calculation\n",
+    "        transformer = Transformer.from_crs(CRS(\"EPSG:4326\"), CRS(\"EPSG:3857\"), always_xy=True)\n",
+    "        def find_nearest_point(point, gdf_target):\n",
+    "            # Find the nearest point in gdf_target to the given point\n",
+    "            nearest_geom = nearest_points(point, gdf_target.unary_union)[1]\n",
+    "            # Transform coordinates for distance calculation\n",
+    "            p1 = Point(transformer.transform(point.x, point.y))\n",
+    "            p2 = Point(transformer.transform(nearest_geom.x, nearest_geom.y))\n",
+    "            distance = p1.distance(p2)\n",
+    "            return nearest_geom.x, nearest_geom.y, distance\n",
+    "        gdf_source['nearest_lon'], gdf_source['nearest_lat'], gdf_source[\"distance_to_nearest\"] = zip(\n",
+    "            *gdf_source.geometry.apply(lambda x: find_nearest_point(x, gdf_target))\n",
+    "        )\n",
+    "        return gdf_source\n",
+    "    \n",
+    "    parking_candidates = generate_closest_points(parking_candidates, combined_charging_points)\n",
     "\n",
     "    # add pc4_muni_density to neo4j\n",
     "    def add_pc4_muni_density(df):\n",
@@ -122,7 +158,10 @@
     "                MERGE (p:PC4Area {pc4_code: $pc4_code})\n",
     "                MERGE (c:CandidateLocation {\n",
     "                    lat: $lat, \n",
-    "                    lon: $lon\n",
+    "                    lon: $lon,\n",
+    "                    nearest_lat : $nearest_lat, \n",
+    "                    nearest_lon : $nearest_lon, \n",
+    "                    distance_to_nearest : $distance_to_nearest\n",
     "                })\n",
     "                MERGE (c)-[:IS_LOCATED_IN]->(p)\n",
     "\n",
@@ -133,7 +172,10 @@
     "                session.run(query, \n",
     "                            pc4_code=row['pc4_code'], \n",
     "                            lat=row['geometry'].y, \n",
-    "                            lon=row['geometry'].x)\n",
+    "                            lon=row['geometry'].x,\n",
+    "                            nearest_lat=row['nearest_lat'], \n",
+    "                            nearest_lon=row['nearest_lon'], \n",
+    "                            distance_to_nearest=row['distance_to_nearest'])\n",
     "    add_parking_candidates(parking_candidates)\n",
     "\n",
     "    \n",
@@ -142,6 +184,14 @@
     "\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e700a98f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
