feat: parallel version that is faster

--- a/upload_to_neo4j.ipynb
+++ b/upload_to_neo4j.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "a73452fd",
    "metadata": {},
    "outputs": [
@@ -24,14 +24,12 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/zk/99phrd0d2fs5xjbc622wn4_h0000gn/T/ipykernel_18482/980874636.py:34: DeprecationWarning: The 'unary_union' attribute is deprecated, use the 'union_all()' method instead.\n",
+      "/var/folders/zk/99phrd0d2fs5xjbc622wn4_h0000gn/T/ipykernel_20865/2359381052.py:40: DeprecationWarning: The 'unary_union' attribute is deprecated, use the 'union_all()' method instead.\n",
       "  nearest_geom = nearest_points(point, gdf_target.unary_union)[1]\n"
      ]
     }
    ],
    "source": [
-    "#bad practice will fix later\n",
-    "import dask_geopandas as dgpd\n",
     "from neo4j import GraphDatabase\n",
     "import geopandas as gpd\n",
     "import pandas as pd\n",
@@ -53,6 +51,10 @@
     "    # rename Government of Rotterdam to Rotterdam\n",
     "    pc4_muni_density['municipality'] = pc4_muni_density['municipality'].replace(\n",
     "        {\"Government of Rotterdam\": \"Rotterdam\"}\n",
+    "    )\n",
+    "    # rename The Hague to Den Haag\n",
+    "    pc4_muni_density['municipality'] = pc4_muni_density['municipality'].replace(\n",
+    "        {\"The Hague\": \"Den Haag\"}\n",
     "    )\n",
     "    # display(pc4_muni_density)\n",
     "    combined_charging_points = gpd.read_file(\"data/combined-charging-points-zuid-holland.geojson\")\n",
@@ -186,9 +188,163 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f1a4efd5",
+   "metadata": {},
+   "source": [
+    "unwind version"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "e700a98f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/zk/99phrd0d2fs5xjbc622wn4_h0000gn/T/ipykernel_20865/2964180588.py:31: DeprecationWarning: The 'unary_union' attribute is deprecated, use the 'union_all()' method instead.\n",
+      "  target_union = gdf_target.unary_union\n",
+      "100%|██████████| 52953/52953 [00:07<00:00, 7547.24it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from neo4j import GraphDatabase\n",
+    "from concurrent.futures import ThreadPoolExecutor\n",
+    "import geopandas as gpd\n",
+    "import pandas as pd\n",
+    "from shapely.geometry import Point\n",
+    "from shapely.ops import nearest_points\n",
+    "from pyproj import Transformer, CRS\n",
+    "from tqdm import tqdm  # optional progress bar\n",
+    "\n",
+    "URI = \"bolt://localhost:7687\"\n",
+    "AUTH = (\"neo4j\", \"12345678\")\n",
+    "driver = GraphDatabase.driver(URI, auth=AUTH)\n",
+    "\n",
+    "with driver:\n",
+    "    driver.verify_connectivity()\n",
+    "\n",
+    "    # Load files\n",
+    "    pc4_muni_density = gpd.read_file(\"data/zh_pc4_gdf_with_municipality_and_ev_charger_density.geojson\")\n",
+    "    pc4_muni_density['municipality'] = pc4_muni_density['municipality'].replace({\n",
+    "        \"Government of Rotterdam\": \"Rotterdam\",\n",
+    "        \"The Hague\": \"Den Haag\"\n",
+    "    })\n",
+    "\n",
+    "    combined_charging_points = gpd.read_file(\"data/combined-charging-points-zuid-holland.geojson\")\n",
+    "    muni_translated = pd.read_json(\"data/municipalities_data_translated.json\")\n",
+    "    parking_candidates = gpd.read_file(\"data/candidates.gpkg\")\n",
+    "\n",
+    "    def generate_closest_points_parallel(gdf_source, gdf_target, n_threads=8):\n",
+    "        # Prepare projection\n",
+    "        transformer = Transformer.from_crs(CRS(\"EPSG:4326\"), CRS(\"EPSG:3857\"), always_xy=True)\n",
+    "        target_union = gdf_target.unary_union\n",
+    "\n",
+    "        def find_nearest_info(point):\n",
+    "            nearest_geom = nearest_points(point, target_union)[1]\n",
+    "            p1 = Point(transformer.transform(point.x, point.y))\n",
+    "            p2 = Point(transformer.transform(nearest_geom.x, nearest_geom.y))\n",
+    "            distance = p1.distance(p2)\n",
+    "            return nearest_geom.x, nearest_geom.y, distance\n",
+    "\n",
+    "        # Apply in parallel\n",
+    "        geometries = list(gdf_source.geometry)\n",
+    "        results = []\n",
+    "        with ThreadPoolExecutor(max_workers=n_threads) as executor:\n",
+    "            results = list(tqdm(executor.map(find_nearest_info, geometries), total=len(geometries)))\n",
+    "\n",
+    "        # Unpack results\n",
+    "        gdf_source['nearest_lon'], gdf_source['nearest_lat'], gdf_source['distance_to_nearest'] = zip(*results)\n",
+    "        return gdf_source\n",
+    "    parking_candidates = generate_closest_points_parallel(parking_candidates, combined_charging_points)\n",
+    "    # --- Bulk insertion functions ---\n",
+    "\n",
+    "    def add_pc4_muni_density(df):\n",
+    "        data = df[['municipality', 'pc4_code', 'density']].to_dict(\"records\")\n",
+    "        query = \"\"\"\n",
+    "        UNWIND $data AS row\n",
+    "        MERGE (m:Municipality {name: row.municipality})\n",
+    "        MERGE (p:PC4Area {pc4_code: row.pc4_code})\n",
+    "        SET p.density = row.density, p.name = row.pc4_code\n",
+    "        MERGE (p)-[:IS_LOCATED_IN]->(m)\n",
+    "        \"\"\"\n",
+    "        with driver.session() as session:\n",
+    "            session.run(query, data=data)\n",
+    "\n",
+    "    def add_combined_charging_points(df):\n",
+    "        df['lat'] = df.geometry.y\n",
+    "        df['lon'] = df.geometry.x\n",
+    "        data = df[['pc4_code', 'lat', 'lon', 'nearest_lat', 'nearest_lon', 'distance_to_nearest']].to_dict(\"records\")\n",
+    "        query = \"\"\"\n",
+    "        UNWIND $data AS row\n",
+    "        MERGE (p:PC4Area {pc4_code: row.pc4_code})\n",
+    "        MERGE (ev:EVChargingStation {\n",
+    "            lat: row.lat,\n",
+    "            lon: row.lon,\n",
+    "            nearest_lat: row.nearest_lat,\n",
+    "            nearest_lon: row.nearest_lon,\n",
+    "            distance_to_nearest: row.distance_to_nearest\n",
+    "        })\n",
+    "        MERGE (ev)-[:IS_LOCATED_IN]->(p)\n",
+    "        WITH p, ev\n",
+    "        MATCH (m:Municipality)<-[:IS_LOCATED_IN]-(p)\n",
+    "        MERGE (ev)-[:IS_LOCATED_IN]->(m)\n",
+    "        \"\"\"\n",
+    "        with driver.session() as session:\n",
+    "            session.run(query, data=data)\n",
+    "\n",
+    "    def add_municipality_data(df):\n",
+    "        data = df.to_dict(\"records\")\n",
+    "        query = \"\"\"\n",
+    "        UNWIND $data AS row\n",
+    "        MERGE (m:Municipality {name: row.Municipality})\n",
+    "        SET m.home_value = row.HomeValue,\n",
+    "            m.households = row.Households,\n",
+    "            m.vehicles = row.Vehicles,\n",
+    "            m.passenger_cars = row.PassengerCars,\n",
+    "            m.population_density = row.PopulationDensity\n",
+    "        \"\"\"\n",
+    "        with driver.session() as session:\n",
+    "            session.run(query, data=data)\n",
+    "\n",
+    "    def add_parking_candidates(df):\n",
+    "        df['lat'] = df.geometry.y\n",
+    "        df['lon'] = df.geometry.x\n",
+    "        data = df[['pc4_code', 'lat', 'lon', 'nearest_lat', 'nearest_lon', 'distance_to_nearest']].to_dict(\"records\")\n",
+    "        query = \"\"\"\n",
+    "        UNWIND $data AS row\n",
+    "        MERGE (p:PC4Area {pc4_code: row.pc4_code})\n",
+    "        MERGE (c:CandidateLocation {\n",
+    "            lat: row.lat,\n",
+    "            lon: row.lon,\n",
+    "            nearest_lat: row.nearest_lat,\n",
+    "            nearest_lon: row.nearest_lon,\n",
+    "            distance_to_nearest: row.distance_to_nearest\n",
+    "        })\n",
+    "        MERGE (c)-[:IS_LOCATED_IN]->(p)\n",
+    "        WITH p, c\n",
+    "        MATCH (m:Municipality)<-[:IS_LOCATED_IN]-(p)\n",
+    "        MERGE (c)-[:IS_LOCATED_IN]->(m)\n",
+    "        \"\"\"\n",
+    "        with driver.session() as session:\n",
+    "            session.run(query, data=data)\n",
+    "\n",
+    "    # --- Execute data loading ---\n",
+    "\n",
+    "    add_pc4_muni_density(pc4_muni_density)\n",
+    "    add_combined_charging_points(combined_charging_points)\n",
+    "    add_municipality_data(muni_translated)\n",
+    "    add_parking_candidates(parking_candidates)\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e700a98f",
+   "id": "366e84e8",
    "metadata": {},
    "outputs": [],
    "source": []
