feat: make the parallel uploads faster

--- a/score.ipynb
+++ b/score.ipynb
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "094c6c4b",
    "metadata": {},
    "outputs": [
@@ -231,44 +231,71 @@
      "output_type": "stream",
      "text": [
       "Found 50 municipalities. Starting parallel scoring...\n",
-      "[Lansingerland] Scored 736 candidates.\n",
-      "[Dordrecht] Scored 1483 candidates.\n",
-      "[Hoeksche Waard] Scored 1070 candidates.\n",
-      "[Den Haag] Scored 10660 candidates.\n",
       "[Nieuwkoop] Scored 201 candidates.\n",
       "[Katwijk] Scored 604 candidates.\n",
+      "[Hoeksche Waard] Scored 1070 candidates.\n",
+      "[Lansingerland] Scored 835 candidates.\n",
+      "[Dordrecht] Scored 1483 candidates.\n",
       "[Voorschoten] Scored 1687 candidates.\n",
       "[Leidschendam-Voorburg] Scored 3115 candidates.\n",
+      "[Den Haag] Scored 10740 candidates.\n",
       "[Leiden] Scored 1480 candidates.\n",
-      "[Zoetermeer] Scored 1272 candidates.\n",
+      "[Zoetermeer] Scored 1285 candidates.\n",
       "[Waddinxveen] Scored 1813 candidates.\n",
       "[Gouda] Scored 673 candidates.\n",
       "[Krimpenerwaard] Scored 242 candidates.\n",
       "[Alblasserdam] Scored 109 candidates.\n",
       "[Ridderkerk] Scored 197 candidates.\n",
-      "[Schiedam] Scored 827 candidates.\n",
-      "[Rotterdam] Scored 3888 candidates.\n",
       "[Nissewaard] Scored 444 candidates.\n",
-      "[Goeree-Overflakkee] Scored 511 candidates.\n",
+      "[Schiedam] Scored 827 candidates.\n",
+      "[Rotterdam] Scored 3890 candidates.\n",
       "[Hendrik-Ido-Ambacht] Scored 149 candidates.\n",
+      "[Goeree-Overflakkee] Scored 511 candidates.\n",
       "[Bodegraven-Reeuwijk] Scored 194 candidates.\n",
-      "[Gorinchem] Scored 975 candidates.\n",
       "[Voorne aan Zee] Scored 633 candidates.\n",
-      "[Alphen aan den Rijn] Scored 2022 candidates.\n",
-      "[Delft] Scored 1557 candidates.\n"
+      "[Gorinchem] Scored 975 candidates.\n",
+      "[Alphen aan den Rijn] Scored 2025 candidates.\n",
+      "[Delft] Scored 1557 candidates.\n",
+      "[Midden-Delfland] Scored 673 candidates.\n",
+      "[Barendrecht] Scored 317 candidates.\n",
+      "[Vlaardingen] Scored 1019 candidates.\n",
+      "[Lisse] Scored 180 candidates.\n",
+      "[Teylingen] Scored 492 candidates.\n",
+      "[Noordwijk] Scored 949 candidates.\n",
+      "[Westland] Scored 3824 candidates.\n",
+      "[Molenlanden] Scored 1095 candidates.\n",
+      "[Maassluis] Scored 880 candidates.\n",
+      "[Sliedrecht] Scored 391 candidates.\n",
+      "[Kaag en Braassem] Scored 393 candidates.\n",
+      "[Zoeterwoude] Scored 210 candidates.\n",
+      "[Capelle aan den IJssel] Scored 239 candidates.\n",
+      "[Zwijndrecht] Scored 872 candidates.\n",
+      "[Papendrecht] Scored 279 candidates.\n",
+      "[Oegstgeest] Scored 299 candidates.\n",
+      "[Zuidplas] Scored 705 candidates.\n",
+      "[Krimpen aan den IJssel] Scored 154 candidates.\n",
+      "[Rijswijk] Scored 1069 candidates.\n",
+      "[Leiderdorp] Scored 380 candidates.\n",
+      "[Pijnacker-Nootdorp] Scored 1431 candidates.\n",
+      "[Hillegom] Scored 58 candidates.\n",
+      "[Albrandswaard] Scored 233 candidates.\n",
+      "[Wassenaar] Scored 254 candidates.\n",
+      "[Hardinxveld-Giessendam] Scored 74 candidates.\n",
+      "✅ Done updating all candidate scores in batches.\n"
      ]
     }
    ],
    "source": [
     "from neo4j import GraphDatabase\n",
-    "from concurrent.futures import ThreadPoolExecutor\n",
+    "from concurrent.futures import ThreadPoolExecutor, as_completed\n",
     "from itertools import islice\n",
     "\n",
     "URI = \"bolt://localhost:7687\"\n",
     "AUTH = (\"neo4j\", \"12345678\")\n",
     "\n",
     "BATCH_SIZE = 100\n",
-    "MAX_THREADS = 4  # For ThreadPoolExecutor\n",
+    "MAX_THREADS = 8  # For ThreadPoolExecutor\n",
+    "INNER_THREADS = 4  # For processing PC4 areas in parallel\n",
     "\n",
     "\n",
     "# Score calculation function\n",
@@ -291,6 +318,30 @@
     "    while batch := list(islice(it, n)):\n",
     "        yield batch\n",
     "\n",
+    "def process_pc4(pc4, municipality_name):\n",
+    "    pc4_code = pc4[\"pc4_code\"]\n",
+    "    candidates = []\n",
+    "\n",
+    "    with GraphDatabase.driver(URI, auth=AUTH) as driver:\n",
+    "        with driver.session() as session:\n",
+    "            result = session.run(\"\"\"\n",
+    "                MATCH (c:CandidateLocation) -[:IS_LOCATED_IN]-> (p:PC4Area {pc4_code: $pc4_code})\n",
+    "                WITH c, p\n",
+    "                MATCH (c)-[:IS_LOCATED_IN]->(m:Municipality {name: $municipality})\n",
+    "                RETURN properties(c) AS c, properties(p) AS p, properties(m) AS m\n",
+    "            \"\"\", pc4_code=pc4_code, municipality=municipality_name)\n",
+    "\n",
+    "            for record in result:\n",
+    "                c, p, m = record[\"c\"], record[\"p\"], record[\"m\"]\n",
+    "                if not all([c, p, m]) or m.get(\"home_value\") is None:\n",
+    "                    continue\n",
+    "                score = calculate_score(c, p, m)\n",
+    "                if score is None:\n",
+    "                    continue\n",
+    "                c[\"score\"] = score\n",
+    "                candidates.append(c)\n",
+    "    return candidates\n",
+    "\n",
     "\n",
     "def process_municipality(municipality_name):\n",
     "    with GraphDatabase.driver(URI, auth=AUTH) as driver:\n",
@@ -299,35 +350,23 @@
     "                MATCH (p:PC4Area) - [:IS_LOCATED_IN] -> (m:Municipality {name: $municipality})\n",
     "                RETURN p\n",
     "            \"\"\", municipality=municipality_name)\n",
-    "\n",
     "            pc4_areas = [record[\"p\"] for record in pc4_result]\n",
-    "            if not pc4_areas:\n",
-    "                print(f\"No PC4 areas found in {municipality_name}\")\n",
-    "                return\n",
     "\n",
-    "            all_candidates = []\n",
-    "            for pc4 in pc4_areas:\n",
-    "                pc4_code = pc4[\"pc4_code\"]\n",
-    "                result = session.run(\"\"\"\n",
-    "                    MATCH (c:CandidateLocation) -[:IS_LOCATED_IN]-> (p:PC4Area {pc4_code: $pc4_code})\n",
-    "                    WITH c, p\n",
-    "                    MATCH (c)-[:IS_LOCATED_IN]->(m:Municipality {name: $municipality})\n",
-    "                    RETURN properties(c) AS c, properties(p) AS p, properties(m) AS m\n",
-    "                \"\"\", pc4_code=pc4_code, municipality=municipality_name)\n",
+    "    if not pc4_areas:\n",
+    "        print(f\"No PC4 areas found in {municipality_name}\")\n",
+    "        return\n",
     "\n",
-    "                for record in result:\n",
-    "                    c, p, m = record[\"c\"], record[\"p\"], record[\"m\"]\n",
-    "                    if not all([c, p, m]) or m.get(\"home_value\") is None:\n",
-    "                        continue\n",
-    "                    score = calculate_score(c, p, m)\n",
-    "                    if score is None:\n",
-    "                        continue\n",
-    "                    c[\"score\"] = score\n",
-    "                    all_candidates.append(c)\n",
+    "    all_candidates = []\n",
     "\n",
-    "            print(f\"[{municipality_name}] Scored {len(all_candidates)} candidates.\")\n",
+    "    with ThreadPoolExecutor(max_workers=INNER_THREADS) as executor:\n",
+    "        futures = [executor.submit(process_pc4, pc4, municipality_name) for pc4 in pc4_areas]\n",
+    "        for future in as_completed(futures):\n",
+    "            all_candidates.extend(future.result())\n",
     "\n",
-    "            # Batch update Neo4j using UNWIND\n",
+    "    print(f\"[{municipality_name}] Scored {len(all_candidates)} candidates.\")\n",
+    "\n",
+    "    with GraphDatabase.driver(URI, auth=AUTH) as driver:\n",
+    "        with driver.session() as session:\n",
     "            for batch in batched(all_candidates, BATCH_SIZE):\n",
     "                session.run(\"\"\"\n",
     "                    UNWIND $candidates AS candidate\n",
