--- a/upload_to_neo4j.ipynb
+++ b/upload_to_neo4j.ipynb
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "e700a98f",
    "metadata": {},
    "outputs": [
@@ -205,15 +205,19 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/zk/99phrd0d2fs5xjbc622wn4_h0000gn/T/ipykernel_20865/2964180588.py:31: DeprecationWarning: The 'unary_union' attribute is deprecated, use the 'union_all()' method instead.\n",
+      "/var/folders/zk/99phrd0d2fs5xjbc622wn4_h0000gn/T/ipykernel_20865/254659619.py:33: DeprecationWarning: The 'unary_union' attribute is deprecated, use the 'union_all()' method instead.\n",
       "  target_union = gdf_target.unary_union\n",
-      "100%|██████████| 52953/52953 [00:07<00:00, 7547.24it/s]\n"
+      "100%|██████████| 52953/52953 [00:07<00:00, 7457.80it/s]\n",
+      "PC4 + Municipality: 100%|██████████| 1/1 [00:00<00:00,  9.24it/s]\n",
+      "Municipality Data: 100%|██████████| 1/1 [00:00<00:00,  7.29it/s]\n",
+      "EV Chargers: 100%|██████████| 10/10 [00:04<00:00,  2.50it/s]71it/s]\n",
+      "Parking Candidates: 100%|██████████| 53/53 [00:27<00:00,  1.96it/s]\n"
      ]
     }
    ],
    "source": [
     "from neo4j import GraphDatabase\n",
-    "from concurrent.futures import ThreadPoolExecutor\n",
+    "from concurrent.futures import ThreadPoolExecutor, as_completed\n",
     "import geopandas as gpd\n",
     "import pandas as pd\n",
     "from shapely.geometry import Point\n",
@@ -224,6 +228,8 @@
     "URI = \"bolt://localhost:7687\"\n",
     "AUTH = (\"neo4j\", \"12345678\")\n",
     "driver = GraphDatabase.driver(URI, auth=AUTH)\n",
+    "\n",
+    "MAX_WORKERS = 16  # Adjust based on your system's capabilities\n",
     "\n",
     "with driver:\n",
     "    driver.verify_connectivity()\n",
@@ -239,7 +245,7 @@
     "    muni_translated = pd.read_json(\"data/municipalities_data_translated.json\")\n",
     "    parking_candidates = gpd.read_file(\"data/candidates.gpkg\")\n",
     "\n",
-    "    def generate_closest_points_parallel(gdf_source, gdf_target, n_threads=8):\n",
+    "    def generate_closest_points_parallel(gdf_source, gdf_target, n_threads=MAX_WORKERS):\n",
     "        # Prepare projection\n",
     "        transformer = Transformer.from_crs(CRS(\"EPSG:4326\"), CRS(\"EPSG:3857\"), always_xy=True)\n",
     "        target_union = gdf_target.unary_union\n",
@@ -263,6 +269,8 @@
     "    parking_candidates = generate_closest_points_parallel(parking_candidates, combined_charging_points)\n",
     "    # --- Bulk insertion functions ---\n",
     "\n",
+    "    CHUNK_SIZE = 1000  # or adjust depending on performance/memory\n",
+    "\n",
     "    def add_pc4_muni_density(df):\n",
     "        data = df[['municipality', 'pc4_code', 'density']].to_dict(\"records\")\n",
     "        query = \"\"\"\n",
@@ -273,12 +281,11 @@
     "        MERGE (p)-[:IS_LOCATED_IN]->(m)\n",
     "        \"\"\"\n",
     "        with driver.session() as session:\n",
-    "            session.run(query, data=data)\n",
+    "            for i in tqdm(range(0, len(data), CHUNK_SIZE), desc=\"PC4 + Municipality\"):\n",
+    "                chunk = data[i:i + CHUNK_SIZE]\n",
+    "                session.run(query, data=chunk)\n",
     "\n",
-    "    def add_combined_charging_points(df):\n",
-    "        df['lat'] = df.geometry.y\n",
-    "        df['lon'] = df.geometry.x\n",
-    "        data = df[['pc4_code', 'lat', 'lon', 'nearest_lat', 'nearest_lon', 'distance_to_nearest']].to_dict(\"records\")\n",
+    "    def insert_ev_charger_chunk(chunk):\n",
     "        query = \"\"\"\n",
     "        UNWIND $data AS row\n",
     "        MERGE (p:PC4Area {pc4_code: row.pc4_code})\n",
@@ -295,7 +302,18 @@
     "        MERGE (ev)-[:IS_LOCATED_IN]->(m)\n",
     "        \"\"\"\n",
     "        with driver.session() as session:\n",
-    "            session.run(query, data=data)\n",
+    "            session.run(query, data=chunk)\n",
+    "\n",
+    "    def add_combined_charging_points(df):\n",
+    "        df['lat'] = df.geometry.y\n",
+    "        df['lon'] = df.geometry.x\n",
+    "        data = df[['pc4_code', 'lat', 'lon', 'nearest_lat', 'nearest_lon', 'distance_to_nearest']].to_dict(\"records\")\n",
+    "        chunks = [data[i:i + CHUNK_SIZE] for i in range(0, len(data), CHUNK_SIZE)]\n",
+    "\n",
+    "        with ThreadPoolExecutor(max_workers=MAX_WORKERS) as executor:\n",
+    "            futures = [executor.submit(insert_ev_charger_chunk, chunk) for chunk in chunks]\n",
+    "            for _ in tqdm(as_completed(futures), total=len(futures), desc=\"EV Chargers\"):\n",
+    "                pass\n",
     "\n",
     "    def add_municipality_data(df):\n",
     "        data = df.to_dict(\"records\")\n",
@@ -309,12 +327,11 @@
     "            m.population_density = row.PopulationDensity\n",
     "        \"\"\"\n",
     "        with driver.session() as session:\n",
-    "            session.run(query, data=data)\n",
+    "            for i in tqdm(range(0, len(data), CHUNK_SIZE), desc=\"Municipality Data\"):\n",
+    "                chunk = data[i:i + CHUNK_SIZE]\n",
+    "                session.run(query, data=chunk)\n",
     "\n",
-    "    def add_parking_candidates(df):\n",
-    "        df['lat'] = df.geometry.y\n",
-    "        df['lon'] = df.geometry.x\n",
-    "        data = df[['pc4_code', 'lat', 'lon', 'nearest_lat', 'nearest_lon', 'distance_to_nearest']].to_dict(\"records\")\n",
+    "    def insert_parking_chunk(chunk):\n",
     "        query = \"\"\"\n",
     "        UNWIND $data AS row\n",
     "        MERGE (p:PC4Area {pc4_code: row.pc4_code})\n",
@@ -331,14 +348,25 @@
     "        MERGE (c)-[:IS_LOCATED_IN]->(m)\n",
     "        \"\"\"\n",
     "        with driver.session() as session:\n",
-    "            session.run(query, data=data)\n",
+    "            session.run(query, data=chunk)\n",
     "\n",
+    "    def add_parking_candidates(df):\n",
+    "        df['lat'] = df.geometry.y\n",
+    "        df['lon'] = df.geometry.x\n",
+    "        data = df[['pc4_code', 'lat', 'lon', 'nearest_lat', 'nearest_lon', 'distance_to_nearest']].to_dict(\"records\")\n",
+    "        chunks = [data[i:i + CHUNK_SIZE] for i in range(0, len(data), CHUNK_SIZE)]\n",
+    "\n",
+    "        with ThreadPoolExecutor(max_workers=MAX_WORKERS) as executor:\n",
+    "            futures = [executor.submit(insert_parking_chunk, chunk) for chunk in chunks]\n",
+    "            for _ in tqdm(as_completed(futures), total=len(futures), desc=\"Parking Candidates\"):\n",
+    "                pass\n",
     "    # --- Execute data loading ---\n",
     "\n",
     "    add_pc4_muni_density(pc4_muni_density)\n",
-    "    add_combined_charging_points(combined_charging_points)\n",
-    "    add_municipality_data(muni_translated)\n",
-    "    add_parking_candidates(parking_candidates)\n"
+    "    with ThreadPoolExecutor(max_workers=MAX_WORKERS) as executor:\n",
+    "        executor.submit(add_combined_charging_points, combined_charging_points)\n",
+    "        executor.submit(add_municipality_data, muni_translated)\n",
+    "        executor.submit(add_parking_candidates, parking_candidates)\n"
    ]
   },
   {
