feat: some visualisations, tables, maps

--- a/upload_to_neo4j.ipynb
+++ b/upload_to_neo4j.ipynb
@@ -15,184 +15,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "a73452fd",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/zk/99phrd0d2fs5xjbc622wn4_h0000gn/T/ipykernel_20865/2359381052.py:40: DeprecationWarning: The 'unary_union' attribute is deprecated, use the 'union_all()' method instead.\n",
-      "  nearest_geom = nearest_points(point, gdf_target.unary_union)[1]\n"
-     ]
-    }
-   ],
-   "source": [
-    "from neo4j import GraphDatabase\n",
-    "import geopandas as gpd\n",
-    "import pandas as pd\n",
-    "from shapely.geometry import Point\n",
-    "from shapely.ops import nearest_points\n",
-    "from pyproj import Transformer, CRS\n",
-    "\n",
-    "URI = \"bolt://localhost:7687\"\n",
-    "AUTH = (\"neo4j\", \"12345678\")\n",
-    "driver = GraphDatabase.driver(URI, auth=AUTH)\n",
-    "\n",
-    "# the commented out queries are because the nodes are created but not connected so it adds the data to nothing\n",
-    "\n",
-    "with GraphDatabase.driver(URI, auth=AUTH) as driver:\n",
-    "    driver.verify_connectivity()\n",
-    "\n",
-    "    # read geojson in gpd\n",
-    "    pc4_muni_density = gpd.read_file(\"data/zh_pc4_gdf_with_municipality_and_ev_charger_density.geojson\")\n",
-    "    # rename Government of Rotterdam to Rotterdam\n",
-    "    pc4_muni_density['municipality'] = pc4_muni_density['municipality'].replace(\n",
-    "        {\"Government of Rotterdam\": \"Rotterdam\"}\n",
-    "    )\n",
-    "    # rename The Hague to Den Haag\n",
-    "    pc4_muni_density['municipality'] = pc4_muni_density['municipality'].replace(\n",
-    "        {\"The Hague\": \"Den Haag\"}\n",
-    "    )\n",
-    "    # display(pc4_muni_density)\n",
-    "    combined_charging_points = gpd.read_file(\"data/combined-charging-points-zuid-holland.geojson\")\n",
-    "    # display(combined_charging_points)\n",
-    "    muni_translated = pd.read_json(\"data/municipalities_data_translated.json\")\n",
-    "    # display(muni_translated)\n",
-    "    parking_candidates = gpd.read_file(\"data/candidates.gpkg\")\n",
-    "\n",
-    "    # get closest ev charger to each parking candidate\n",
-    "    def generate_closest_points(gdf_source, gdf_target):\n",
-    "        # Convert the GeoDataFrames to EPSG:3857 for accurate distance calculation\n",
-    "        transformer = Transformer.from_crs(CRS(\"EPSG:4326\"), CRS(\"EPSG:3857\"), always_xy=True)\n",
-    "        def find_nearest_point(point, gdf_target):\n",
-    "            # Find the nearest point in gdf_target to the given point\n",
-    "            nearest_geom = nearest_points(point, gdf_target.unary_union)[1]\n",
-    "            # Transform coordinates for distance calculation\n",
-    "            p1 = Point(transformer.transform(point.x, point.y))\n",
-    "            p2 = Point(transformer.transform(nearest_geom.x, nearest_geom.y))\n",
-    "            distance = p1.distance(p2)\n",
-    "            return nearest_geom.x, nearest_geom.y, distance\n",
-    "        gdf_source['nearest_lon'], gdf_source['nearest_lat'], gdf_source[\"distance_to_nearest\"] = zip(\n",
-    "            *gdf_source.geometry.apply(lambda x: find_nearest_point(x, gdf_target))\n",
-    "        )\n",
-    "        return gdf_source\n",
-    "    \n",
-    "    parking_candidates = generate_closest_points(parking_candidates, combined_charging_points)\n",
-    "\n",
-    "    # add pc4_muni_density to neo4j\n",
-    "    def add_pc4_muni_density(df):\n",
-    "        with driver.session() as session:\n",
-    "            for _, row in df.iterrows():\n",
-    "                query = \"\"\"\n",
-    "                MERGE (m:Municipality {name: $municipality})\n",
-    "                MERGE (p:PC4Area {pc4_code: $pc4_code})\n",
-    "                SET p.density = $density, p.name = $pc4_code\n",
-    "                MERGE (p)-[:IS_LOCATED_IN]->(m)\n",
-    "                \"\"\"\n",
-    "                session.run(query, \n",
-    "                            municipality=row['municipality'], \n",
-    "                            pc4_code=row['pc4_code'], \n",
-    "                            density=row['density'])\n",
-    "    add_pc4_muni_density(pc4_muni_density)\n",
-    "\n",
-    "    def add_combined_charging_points(df):\n",
-    "        with driver.session() as session:\n",
-    "            for _, row in df.iterrows():\n",
-    "                query = \"\"\"\n",
-    "                MERGE (p:PC4Area {pc4_code: $pc4_code})\n",
-    "\n",
-    "                MERGE (ev:EVChargingStation {\n",
-    "                    lat : $lat, \n",
-    "                    lon : $lon, \n",
-    "                    nearest_lat : $nearest_lat, \n",
-    "                    nearest_lon : $nearest_lon, \n",
-    "                    distance_to_nearest : $distance_to_nearest\n",
-    "                    }\n",
-    "                )\n",
-    "\n",
-    "                MERGE (ev)-[:IS_LOCATED_IN]->(p)\n",
-    "\n",
-    "                WITH p, ev\n",
-    "                MATCH (m:Municipality)<-[:IS_LOCATED_IN]-(p)\n",
-    "                MERGE (ev)-[:IS_LOCATED_IN]->(m)\n",
-    "                \"\"\"\n",
-    "                session.run(query, \n",
-    "                            pc4_code=row['pc4_code'], \n",
-    "                            lat=row['lat'], \n",
-    "                            lon=row['lon'], \n",
-    "                            nearest_lat=row['nearest_lat'], \n",
-    "                            nearest_lon=row['nearest_lon'], \n",
-    "                            distance_to_nearest=row['distance_to_nearest'])\n",
-    "    add_combined_charging_points(combined_charging_points)\n",
-    "\n",
-    "    def add_municipality_data(df):\n",
-    "        with driver.session() as session:\n",
-    "            for _, row in df.iterrows():\n",
-    "                query = \"\"\"\n",
-    "                MERGE (m:Municipality {name: $municipality})\n",
-    "                SET m.home_value = $home_value,\n",
-    "                    m.households = $households,\n",
-    "                    m.vehicles = $vehicles,\n",
-    "                    m.passenger_cars = $passenger_cars,\n",
-    "                    m.population_density = $population_density\n",
-    "                \"\"\"\n",
-    "                session.run(query, \n",
-    "                            municipality=row['Municipality'], \n",
-    "                            area=row['Area'],\n",
-    "                            addresses=row['Addresses'],\n",
-    "                            dwellinngs=row['Dwellings'],\n",
-    "                            population=row['Population'],\n",
-    "                            business_establishments=row['BusinessEstablishments'],\n",
-    "                            home_value=row['HomeValue'], \n",
-    "                            households=row['Households'], \n",
-    "                            vehicles=row['Vehicles'], \n",
-    "                            passenger_cars=row['PassengerCars'], \n",
-    "                            population_density=row['PopulationDensity'])\n",
-    "    add_municipality_data(muni_translated)\n",
-    "    \n",
-    "    def add_parking_candidates(df):\n",
-    "        with driver.session() as session:\n",
-    "            for _, row in df.iterrows():\n",
-    "                query = \"\"\"\n",
-    "                MERGE (p:PC4Area {pc4_code: $pc4_code})\n",
-    "                MERGE (c:CandidateLocation {\n",
-    "                    lat: $lat, \n",
-    "                    lon: $lon,\n",
-    "                    nearest_lat : $nearest_lat, \n",
-    "                    nearest_lon : $nearest_lon, \n",
-    "                    distance_to_nearest : $distance_to_nearest\n",
-    "                })\n",
-    "                MERGE (c)-[:IS_LOCATED_IN]->(p)\n",
-    "\n",
-    "                WITH p, c\n",
-    "                MATCH (m:Municipality)<-[:IS_LOCATED_IN]-(p)\n",
-    "                MERGE (c)-[:IS_LOCATED_IN]->(m)\n",
-    "                \"\"\"\n",
-    "                session.run(query, \n",
-    "                            pc4_code=row['pc4_code'], \n",
-    "                            lat=row['geometry'].y, \n",
-    "                            lon=row['geometry'].x,\n",
-    "                            nearest_lat=row['nearest_lat'], \n",
-    "                            nearest_lon=row['nearest_lon'], \n",
-    "                            distance_to_nearest=row['distance_to_nearest'])\n",
-    "    add_parking_candidates(parking_candidates)\n",
-    "\n",
-    "    \n",
-    "    driver.close()\n",
-    "\n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "f1a4efd5",
    "metadata": {},
    "source": [
-    "unwind version"
+    "unwind and parallel version"
    ]
   },
   {
