feat: add more visuals

--- a/upload_to_neo4j.ipynb
+++ b/upload_to_neo4j.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "e700a98f",
    "metadata": {},
    "outputs": [
@@ -32,13 +32,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/zk/99phrd0d2fs5xjbc622wn4_h0000gn/T/ipykernel_20865/254659619.py:33: DeprecationWarning: The 'unary_union' attribute is deprecated, use the 'union_all()' method instead.\n",
+      "/var/folders/zk/99phrd0d2fs5xjbc622wn4_h0000gn/T/ipykernel_35674/3297605841.py:33: DeprecationWarning: The 'unary_union' attribute is deprecated, use the 'union_all()' method instead.\n",
       "  target_union = gdf_target.unary_union\n",
-      "100%|██████████| 52953/52953 [00:07<00:00, 7457.80it/s]\n",
-      "PC4 + Municipality: 100%|██████████| 1/1 [00:00<00:00,  9.24it/s]\n",
-      "Municipality Data: 100%|██████████| 1/1 [00:00<00:00,  7.29it/s]\n",
-      "EV Chargers: 100%|██████████| 10/10 [00:04<00:00,  2.50it/s]71it/s]\n",
-      "Parking Candidates: 100%|██████████| 53/53 [00:27<00:00,  1.96it/s]\n"
+      "100%|██████████| 52953/52953 [00:02<00:00, 19389.88it/s] \n",
+      "/var/folders/zk/99phrd0d2fs5xjbc622wn4_h0000gn/T/ipykernel_35674/3297605841.py:63: UserWarning: Geometry column does not contain geometry.\n",
+      "  df[\"geometry\"] = df.geometry.apply(shapely_to_wkt)\n",
+      "PC4 + Municipality: 100%|██████████| 1/1 [00:00<00:00,  1.94it/s]\n",
+      "Municipality Data: 100%|██████████| 1/1 [00:00<00:00, 13.10it/s]\n",
+      "EV Chargers: 100%|██████████| 10/10 [00:06<00:00,  1.53it/s]\n",
+      "Parking Candidates: 100%|██████████| 53/53 [01:19<00:00,  1.50s/it]\n"
      ]
     }
    ],
@@ -99,12 +101,19 @@
     "    CHUNK_SIZE = 1000  # or adjust depending on performance/memory\n",
     "\n",
     "    def add_pc4_muni_density(df):\n",
-    "        data = df[['municipality', 'pc4_code', 'density']].to_dict(\"records\")\n",
+    "        def shapely_to_wkt(geom):\n",
+    "            if geom is None or geom.is_empty:\n",
+    "                return None\n",
+    "            return geom.wkt\n",
+    "\n",
+    "        df = df.copy()\n",
+    "        df[\"geometry\"] = df.geometry.apply(shapely_to_wkt)\n",
+    "        data = df.to_dict(\"records\")\n",
     "        query = \"\"\"\n",
     "        UNWIND $data AS row\n",
     "        MERGE (m:Municipality {name: row.municipality})\n",
     "        MERGE (p:PC4Area {pc4_code: row.pc4_code})\n",
-    "        SET p.density = row.density, p.name = row.pc4_code\n",
+    "        SET p.density = row.density, p.name = row.pc4_code, p.geometry = row.geometry\n",
     "        MERGE (p)-[:IS_LOCATED_IN]->(m)\n",
     "        \"\"\"\n",
     "        with driver.session() as session:\n",
@@ -117,10 +126,8 @@
     "        UNWIND $data AS row\n",
     "        MERGE (p:PC4Area {pc4_code: row.pc4_code})\n",
     "        MERGE (ev:EVChargingStation {\n",
-    "            lat: row.lat,\n",
-    "            lon: row.lon,\n",
-    "            nearest_lat: row.nearest_lat,\n",
-    "            nearest_lon: row.nearest_lon,\n",
+    "            location: point({latitude: row.lat, longitude: row.lon}),\n",
+    "            nearest_location: point({latitude: row.nearest_lat, longitude: row.nearest_lon}),\n",
     "            distance_to_nearest: row.distance_to_nearest\n",
     "        })\n",
     "        MERGE (ev)-[:IS_LOCATED_IN]->(p)\n",
@@ -130,6 +137,7 @@
     "        \"\"\"\n",
     "        with driver.session() as session:\n",
     "            session.run(query, data=chunk)\n",
+    "\n",
     "\n",
     "    def add_combined_charging_points(df):\n",
     "        df['lat'] = df.geometry.y\n",
@@ -151,6 +159,13 @@
     "            m.households = row.Households,\n",
     "            m.vehicles = row.Vehicles,\n",
     "            m.passenger_cars = row.PassengerCars,\n",
+    "            m.population_density = row.PopulationDensity,\n",
+    "            m.population = row.Population,\n",
+    "            m.area = row.Area,\n",
+    "            m.addresses = row.Addresses,\n",
+    "            m.dwellings = row.Dwellings,\n",
+    "            m.persons_per_household = row.PersonsPerHousehold,\n",
+    "            m.business_establishments = row.BusinessEstablishments,\n",
     "            m.population_density = row.PopulationDensity\n",
     "        \"\"\"\n",
     "        with driver.session() as session:\n",
@@ -163,10 +178,8 @@
     "        UNWIND $data AS row\n",
     "        MERGE (p:PC4Area {pc4_code: row.pc4_code})\n",
     "        MERGE (c:CandidateLocation {\n",
-    "            lat: row.lat,\n",
-    "            lon: row.lon,\n",
-    "            nearest_lat: row.nearest_lat,\n",
-    "            nearest_lon: row.nearest_lon,\n",
+    "            location: point({latitude: row.lat, longitude: row.lon}),\n",
+    "            nearest_location: point({latitude: row.nearest_lat, longitude: row.nearest_lon}),\n",
     "            distance_to_nearest: row.distance_to_nearest\n",
     "        })\n",
     "        MERGE (c)-[:IS_LOCATED_IN]->(p)\n",
@@ -176,6 +189,7 @@
     "        \"\"\"\n",
     "        with driver.session() as session:\n",
     "            session.run(query, data=chunk)\n",
+    "\n",
     "\n",
     "    def add_parking_candidates(df):\n",
     "        df['lat'] = df.geometry.y\n",
@@ -199,7 +213,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "366e84e8",
+   "id": "33952d5f",
    "metadata": {},
    "outputs": [],
    "source": []
